--- a/ddd4-6-1-1.css
+++ b/ddd4-6-1-1.css
@@ -62,6 +62,8 @@
     vertical-align: top;
     padding-bottom: 2px; /*즐찾소개채널클립 크기*/
     border-bottom: 3px solid #6E8ACF; /*가운데선*/
+  }
+
 body {
 
     height: auto !important;
