--- a/ddd11-1.css
+++ b/ddd11-1.css
@@ -104,7 +104,7 @@ div #article-list .pagination>li>a, .pagination>li>span {
 
 #board-info h1>a {
 
-    color: ##f17374;
+    color: #f17374;
 
 }
 
